--- a/index.html
+++ b/index.html
@@ -102,10 +102,13 @@
     <h1>Portafolio de Matias Oropeza</h1>
 </header>
 
+<!-- ---------------- MENÚ ---------------- -->
 <div class="menu">
     <a href="index.html">Inicio</a>
     <a href="materias.html">Materias</a>
+    <a href="contacto.html">Contacto</a>
 </div>
+<!-- -------------------------------------- -->
 
 <div class="container">
     <h2>Sobre mí</h2>
